# ipv7

./: Dockerfile  README.md  build_errors.txt  reporte.md
.github/workflows/: ci.yml  release.yml
ipv7-core/: .gitignore  Cargo.toml
ipv7-core/src/: main.rs  telemetry.rs
ipv7-core/src/config/: bootstrap.rs  master.rs  mod.rs
ipv7-core/src/identity/: dht.rs  keys.rs  mod.rs
ipv7-core/src/transport/: community.rs  crypto.rs  discovery.rs  handshake.rs  mod.rs  overlay.rs  packet.rs  relay.rs  replay.rs  session.rs  virtual_adapter.rs
ipv7-core/src/ui/: dashboard.rs
